2005/9/10 -- released version 20050910_trunk

* try to trigger an alert with the minimum number of values needed for it
  rather than require a stack with the maximum number of possible values.
  See http://lists.ee.ethz.ch/smokeping-users/msg01654.html for the problem.
  -- niko, reported by Leos Bitto <smokeping *leos.cz>

2005/9/9 -- released version 20050909_trunk

2005/9/8 -- released version 20050908_trunk

2005/9/7 -- released version 20050907_trunk

* automatically regenerate the logo images if Smokeping.pm has been updated --niko

2005/9/6 -- released version 20050906_trunk

2005/9/5 -- released version 20050905_trunk

* don't create directories in "datadir" when running as a CGI
  -- niko
* the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
  by specifying the new configuration variable "dyndir" 
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* return '404 not found' when DYNAMIC updates fail
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* make errors in DYNAMIC updates appear in the web server error log
  -- niko
* remove a quotemeta() call in Config::Grammar to allow metacharacters
  at the right side of '@define'
  -- niko, reported by Warrick FitzGerald <lists.smokeping.wfitzgerald *crtman.com>
* set LC_NUMERIC to C so that users who work with a locale like french that
  would use , as a decimal separator do not trip over failing regexp-matches
  (tobi)
* bugfix for CiscoRTTMonEchoICMP packetsize variable
  -- niko, from Sam Stickland <sam_ml *spacething.org>
* tune DS properties min/max/heartbeat instead of just complaing about
  them not matching (tobi)

2005/05/31 - publish rc5 (tobi)
* Officially include the tSmoke script from the contrib download directory.
  Note that this needs the new 'tmail' variable to be defined in the config file.
  -- niko, original script by Dan McGinn-Combs <d.mcginn-combs *mindspring.com>