@@ -1,3 +1,5 @@
+2005/9/11 -- released version 20050911_trunk
+
 2005/9/10 -- released version 20050910_trunk
 
 * try to trigger an alert with the minimum number of values needed for it
